tests/requests/invalid/rfc9110_field_value_ctl_bel_01.http
GET /foo HTTP/1.1\r\n
Host: example.com\r\n
X-Value: plain\x07injected\r\n
\r\n
